[metadata]
name = scheduling_simulator
version = 0.1
license = MIT
description = Simple scheduling simulator with two cars in the lane change scenario
long_description = file: README.md
author = Aloysio Galvão Lopes

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    gym
    shapely
    numpy
    opencv_python
    matplotlib

[options.packages.find]
where=src