[metadata]
name = scheduling_simulator
version = 0.1
license = MIT
description = Simple scheduling simulator with two cars in the lane change scenario
long_description = file: README.md
author = Aloysio Galvão Lopes

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    gym
    f110_gym @ git+https://github.com/f1tenth/f1tenth_gym
    shapely
    numpy
    opencv_python
    matplotlib
    simple_pid
    pyglet
    pynput

[options.packages.find]
where=src
